# OXtal

./: README.md  pyproject.toml  run_eval.sh  run_inference.sh
configs/: base.yaml  configs_data.py  inference.yaml
configs/data/: oxtal.yaml
configs/inference/: default.yaml
configs/logger/: many_loggers.yaml  wandb.yaml
configs/loss/: default.yaml
configs/model/: default.yaml
configs/paths/: from_env.yaml
configs/perm/: default.yaml
configs/task_manager/: default.yaml
data/datasets/: comp5.txt  comp6.txt  comp7.txt  flexible.txt  rigid.txt
evaluation/: get_metrics.py  truth_map.csv
examples/: BIPY.sdf  all_inference.json  competition.json  flexible.json  rigid.json  test.json
oxtal/config/: config.py  extend_types.py
oxtal/data/: ccd.py  constants.py  data_pipeline.py  dataloader.py  dataset.py  featurizer.py  filter.py  infer_data_pipeline.py  json_parser.py  json_to_feature.py  parser.py  substructure_perms.py  task_manager.py  tokenizer.py  utils.py
oxtal/metrics/: clash.py  crystal_similarity.py  lddt_metrics.py  rmsd.py
oxtal/model/: generator.py  oxtal_architecture.py  sample_confidence.py  utils.py
oxtal/model/layer_norm/: .ninja_deps  .ninja_log  build.ninja  layer_norm.py
oxtal/model/layer_norm/kernel/: layer_norm_cuda.cpp  layer_norm_cuda_kernel.cu  type_shim.h
oxtal/model/modules/: diffusion.py  embedders.py  head.py  pairformer.py  primitives.py  transformer.py
oxtal/utils/: cropping.py  distributed.py  file_io.py  geometry.py  np_utils.py  torch_utils.py
oxtal/utils/permutation/: atom_permutation.py  permutation.py  utils.py
oxtal/utils/permutation/chain_permutation/: __init__.py  heuristic.py  pocket_based_permutation.py  utils.py
runner/: dumper.py  inference.py  pyproject.toml  utils.py
